2002-09-30  Darin Adler  <darin@apple.com>

        * WebView.subproj/WebDataSourcePrivate.m: (-[WebDataSource _setLoading:]):
	Remove extra quotes in use of ASSERT_ARG.

2002-09-29  Darin Adler  <darin@apple.com>

        * Misc.subproj/WebIconDatabase.m: (-[WebIconDatabase _iconForFileURL:withSize:]):
	Don't be case sensitive about filename extensions.

        * Misc.subproj/WebDownloadHandler.m:
        * Misc.subproj/WebIconLoader.m:
        * Plugins.subproj/WebPluginStream.m:
        * WebView.subproj/WebDataSource.m:
        * WebView.subproj/WebDefaultContextMenuDelegate.m:
        * WebView.subproj/WebFrame.m:
        * WebView.subproj/WebFramePrivate.m:
        * WebView.subproj/WebView.m:
	Don't use WebFoundation.h -- faster building to just import what we really use.

2002-09-29  Chris Blumenberg  <cblu@apple.com>

	Fixed: 2978258 - quake3arena.com sends me to the flash=false site
	The page has a flash plugin that once loaded, requests the flash=true page. If the plugin doesn't load, the meta refresh tag to the flash=false page fires after 3 seconds. This is how this site's flash detection works.

	The reason this doesn't work for us is because the flash movie is at the bottom of the page. Plugins don't start until the initial drawRect. Since the movie is at the bottom of the page and out of site, the plugin never gets the drawRect and thus, never starts. We now start plug-ins when they are added to the window.

	Fixed: 3062224 - context menu includes "Download Item to Disk" for mailto links

	- Fixed click then click and drag causes crash.

        * Plugins.subproj/WebPluginView.m:
        (-[WebNetscapePluginView drawRect:]): don't start plug-in here
        (-[WebNetscapePluginView viewDidMoveToWindow]): start it here
        * WebView.subproj/WebDefaultContextMenuDelegate.m: